# SDLWrap

./: CMakeLists.txt  CMakePresets.json  SDLWrapConfig.cmake.in
source/: CMakeLists.txt  sdlpp.cpp  sdlpp.h  sdlpp_image.cpp  sdlpp_image.h
